# IFM-ImageSegmentation

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
src/: inference.py
src/ifm_imagesegmentation/: __init__.py  inference.py
src/ifm_imagesegmentation/utils/: pixelToRealWorld.py  results_to_JSON.py  results_to_csv.py
src/utils/: results_to_JSON.py  results_to_csv.py
