[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifm-imagesegmentation"
version = "0.1.0"
description = "IFM image segmentation script utilizing YOLO ultralytics model"
authors = [
    { name = "Georg Kuen", email = "georg.kuen@uibk.ac.at" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=1.7.0",
    "torchvision>=0.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.18.0",
    "matplotlib>=3.2.0",
    "pandas>=1.1.0",
    "scikit-learn>=0.24.0",
    "jupyter>=1.0.0"
]

[project.optional-dependencies]
opencv = [
    "opencv-python>=4.5.0"
]
opencv-headless = [
    "opencv-python-headless>=4.5.0"
]
dev = [
    ".[opencv]",
    "pytest>=7.0.0",
    "ruff>=0.0.0"
]

[project.urls]
Repository = "https://github.com/csav1974/IFM-ImageSegmentation"

[tool.setuptools.packages.find]
where = ["src"]
